--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.14.3",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.1.1",
+    "gulp-svg-sprite": "^1.3.1",
     "gulp-watch": "^4.3.9",
     "postcss-import": "^8.1.2",
     "postcss-mixins": "^5.0.1",
