--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
     "browser-sync": "^2.14.3",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
