--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jquery-smooth-scroll": "^2.0.0",
     "lazysizes": "^2.0.2",
     "normalize.css": "^4.2.0",
+    "picturefill": "^3.0.2",
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
@@ -16,15 +17,18 @@
     "browser-sync": "^2.14.3",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg2png": "^0.3.0",
     "gulp-watch": "^4.3.9",
     "postcss-hexrgba": "^0.2.0",
     "postcss-import": "^8.1.2",
     "postcss-mixins": "^5.0.1",
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dashboard": "^0.1.8"
   }
 }
